apps/deluge/deluge-ovpn-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-openvpn
  namespace: deluge
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge-openvpn
  template:
    metadata:
      labels:
        app: deluge-openvpn
    spec:
      volumes:
        - name: openvpn-config
          secret:
            secretName: openvpn-config
            optional: false
        - name: openvpn-rw
          emptyDir: {}
      containers:
      - name: deluge-openvpn
        image: binhex/arch-delugevpn:2.1.1-1-02
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts:
        - name: openvpn-rw
          mountPath: /config/openvpn
