apps/deluge/deluge-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
    - deluge.andromeda.local
    secretName: deluge-cert
  rules:
  - host: deluge.andromeda.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge-openvpn
            port:
              number: 8112
